--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>ПРОВЕРКА</title>
+    </head>
     <body>
         <h1>Hello world!</h1>
     </body>
